# ljstack

./: .travis.yml  CMakeLists.txt  README.md  build.sh  main.cpp
include/: lj_getframe.h  process_handler.h  utils.h  wrap_luastate.h
include/luajit21/: lua_struct.h
src/: lj_getframe.cpp  process_handler.cpp  wrap_luastate.cpp
